@@ -4,7 +4,7 @@ MojoX::Log::Dispatch::Simple - Simple Log::Dispatch replacement of Mojo::Log
 
 # VERSION
 
-version 1.03
+version 1.04
 
 [![Build Status](https://travis-ci.org/gryphonshafer/MojoX-Log-Dispatch-Simple.svg)](https://travis-ci.org/gryphonshafer/MojoX-Log-Dispatch-Simple)
 [![Coverage Status](https://coveralls.io/repos/gryphonshafer/MojoX-Log-Dispatch-Simple/badge.png)](https://coveralls.io/r/gryphonshafer/MojoX-Log-Dispatch-Simple)
@@ -208,6 +208,12 @@ You can also look for additional information at:
 - [Coveralls](https://coveralls.io/r/gryphonshafer/MojoX-Log-Dispatch-Simple)
 - [CPANTS](http://cpants.cpanauthors.org/dist/MojoX-Log-Dispatch-Simple)
 - [CPAN Testers](http://www.cpantesters.org/distro/M/MojoX-Log-Dispatch-Simple.html)
+
+# GRATITUDE
+
+Special thanks to the following for contributing to this module:
+
+> \*Tomohiro Hosaka
 
 # AUTHOR
 
