@@ -1,6 +1,7 @@
 Revision history for MojoX::Log::Dispatch::Simple
 
 {{$NEXT}}
+        - Tomohiro Hosaka fixed a bug that Prefork server does not end at SIGTERM
 
 1.03      2015-04-22 09:42:56-07:00 America/Los_Angeles
         - Fix to make "warnings" use Log::Dispatch goodness
